# pymsp

./: .gitignore  .pre-commit-config.yaml  README.md  example_usage.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
pymsp/: __init__.py  msp.py
tests/: test_comprehensive.py  test_msp.py
